@@ -1,1 +1,1 @@
-{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304111649","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","validationsFolder":"/storage/emulated/0/Process/automate/4a Transactions/validations/","comment":"Forgot to add read file for validation.","uri":"content://com.llamalab.automate.provider/flows/22/data"}
+{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304112012","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","validationsFolder":"/storage/emulated/0/Process/automate/4a Transactions/validations/","comment":"Added validation at the right entry point","uri":"content://com.llamalab.automate.provider/flows/22/data"}
