@@ -1,6 +1,6 @@
 [
         {
-                "logic": "transaction["type"] = "Employment" && transaction["accountFrom"] != "Income"",
+                "logic": "transaction[\"type\"] = \"Employment\" && transaction[\"accountFrom\"] != \"Income\"",
                 "message": "When Employment is the type set, the accountFrom needs to be Income."
         }
 ]
