@@ -1,6 +1,6 @@
 [
         {
-                "logic": "transaction["accountTo"] = "Income"",
+                "logic": "transaction[\"accountTo\"] = \"Income\"",
                 "message": "Income can not be the account used for AccountTo."
         }
 ]
