@@ -1,6 +1,6 @@
 [
         {
-                "logic": "transaction["currency"] = "ZAR" && transaction["accountFrom"] != "FNB Cheque"",
+                "logic": "transaction[\"currency\"] = \"ZAR\" && transaction[\"accountFrom\"] != \"FNB Cheque\"",
                 "message": "FNB is a rand-denominated account.."
         }
 ]
